# support-ticket-triage-system

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  claude-mapping.json  docker-compose.yml  generate_report.py  pyproject.toml  requirements-transformers.txt  requirements.txt
.github/workflows/: ci.yml
dataset/: confused_minor_major_sample_5k.csv
models/: metadata.json
notebooks/: counts.json  eda.ipynb  l1-cleaning.ipynb  map.json  priority_eda.ipynb  tfidf-baseline.ipynb  transformer_models.ipynb
notebooks/ticket_triage_model/checkpoint-10692/: model.safetensors  optimizer.pt  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
notebooks/ticket_triage_model/checkpoint-16038/: model.safetensors  optimizer.pt  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
notebooks/ticket_triage_model/checkpoint-5346/: config.json  model.safetensors  optimizer.pt  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
scripts/: acquire_datasets.py  download_intent_dataset.py  integrate_mlflow.py  predict_csv.py  predict_transformer.py  run_api.py  train_all.py  train_category.py  train_intent.py  train_priority.py  train_transformer.py
src/triage/: __init__.py  config.py
src/triage/api/: __init__.py  app.py  schemas.py
src/triage/data/: loaders.py  preprocessing.py
src/triage/inference/: __init__.py  predictor.py  predictor_transformer.py
src/triage/models/: __init__.py  artifacts.py  train.py
src/triage/web/: app.py
tests/: conftest.py  test_api.py  test_inference.py  test_preprocessing.py  test_training_smoke.py
