[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "triageiq"
version = "1.0.0"
description = "TriageIQ — AI-powered support ticket classification API and web UI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["machine-learning", "nlp", "ticket-triage", "fastapi", "streamlit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "streamlit>=1.36",
    "joblib>=1.4",
    "mlflow>=2.13.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
]
transformers = [
    "torch>=2.0",
    "transformers>=4.40",
    "datasets>=2.19",
    "accelerate>=0.30",
]

[project.urls]
Homepage = "https://github.com/arsalanqasim/triageiq"
Repository = "https://github.com/arsalanqasim/triageiq"
"Bug Tracker" = "https://github.com/arsalanqasim/triageiq/issues"

[project.scripts]
triageiq-api = "triage.api.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]
exclude = ["notebooks", "dataset", "models", "venv"]
